Refactor to use new encoding. ArrayCollection only provides iterators.

--- a/notebooks/analyze_structure.ipynb
+++ b/notebooks/analyze_structure.ipynb
@@ -1060,6 +1060,510 @@
     "        if \"S6\" in antimony_str:\n",
     "            print(antimony_str)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8993b4b5-7807-470b-9c7d-aec97cba6272",
+   "metadata": {},
+   "source": [
+    "# Vectorizing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "201bee61-33c8-4c02-9da8-8f0b914040da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3, 0, 1, 3],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [1, 3, 0, 0, 1]])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.random.randint(0, 5, (3, 5))\n",
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "f35ac683-0eea-4083-a25d-a01b710a5db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [3, 3, 3, 3, 3]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2 = np.repeat(3, 30)\n",
+    "arr2 = np.reshape(arr2, (6, 5))\n",
+    "arr2[4,:] = np.repeat(2, 5)\n",
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "2db8d675-0478-43fb-8b12-71b1e7926ec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1[0, :] <= arr2[0, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "8e38196b-4e55-49d2-9a48-ed7e095e07a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 3, 0, 1],\n",
+       "       [0, 1, 3, 0, 1],\n",
+       "       [0, 1, 3, 0, 1],\n",
+       "       [0, 1, 3, 0, 1],\n",
+       "       [0, 1, 3, 0, 1],\n",
+       "       [0, 1, 3, 0, 1]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat1 = np.repeat(arr1[0, :], 6)\n",
+    "mat1 = np.reshape(mat1, (5, 6))\n",
+    "mat1 = np.transpose(mat1)\n",
+    "mat1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "4cde85cd-630f-4f3b-beca-e1d9b4d49fd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True, False,  True])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(mat1 <= arr2, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "3f25e6d0-69d0-466d-a92f-777ee13f4c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3, 0, 1, 3],\n",
+       "       [1, 3, 0, 1, 3],\n",
+       "       [1, 3, 0, 1, 3],\n",
+       "       [1, 3, 0, 1, 3],\n",
+       "       [1, 3, 0, 1, 3],\n",
+       "       [1, 3, 0, 1, 3],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [0, 3, 1, 3, 2],\n",
+       "       [1, 3, 0, 0, 1],\n",
+       "       [1, 3, 0, 0, 1],\n",
+       "       [1, 3, 0, 0, 1],\n",
+       "       [1, 3, 0, 0, 1],\n",
+       "       [1, 3, 0, 0, 1],\n",
+       "       [1, 3, 0, 0, 1]])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generalize to all rows of arr1\n",
+    "num_row_other = 6\n",
+    "num_row_self, num_col = np.shape(arr1)\n",
+    "#\n",
+    "mat1 = np.repeat(arr1, num_row_other, axis=0)\n",
+    "#mat1 = np.reshape(mat1, (num_col, num_row_self*num_row_other))\n",
+    "mat1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "643b9e3e-0e9c-4570-9f65-8e7c38b93ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3],\n",
+       "       [3, 3, 3, 3, 3]])"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat2 = np.repeat(arr2, num_row_self, axis=0)\n",
+    "mat2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "7675f580-de5a-4ea9-ae65-1104fa2ac878",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [False, False, False],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rows: rows of other. Columns: rows of self that are all true.\n",
+    "result = np.reshape(np.all(mat1 <= mat2, axis=1), (num_row_other, num_row_self))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "8acc3ea8-3e45-4f7f-80b1-27aeba393bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 5])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_arr = np.array(range(6))\n",
+    "index_arr[np.all(result, axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "971611cc-efce-4b60-a889-18f586d2c5f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/var/folders/02/lb248q1j50dch2pthzkvxmpr0000gn/T/ipykernel_79183/709624473.py\u001b[0m(20)\u001b[0;36mfindCompatibleRows\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     18 \u001b[0;31m    \u001b[0;31m# Do the comparisons. Rows are the rows in superset; columns are rows in subset.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     19 \u001b[0;31m    \u001b[0;31m# We want the indices of rows in superset for each column (row in subset)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 20 \u001b[0;31m    \u001b[0mcomparison_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmat1\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mmat2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnum_row_superset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_row_subset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     21 \u001b[0;31m    \u001b[0mindex_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_row_superset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# All superset rows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     22 \u001b[0;31m    \u001b[0;31m# For each row n in subset (column in comparison_arr), select those rows in superset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  c\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0, 1, 2, 3, 4, 5]), array([0, 2, 4]), array([0, 1, 2, 3, 4, 5])]"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findCompatibleRows(subset_mat:np.array, superset_mat:np.array)->list:\n",
+    "    \"\"\"\n",
+    "    Finds for each row in subset, the collection of rows in subset such the row in subset <= row in superset.\n",
+    "\n",
+    "    Args:\n",
+    "        subset_mat: np.ndarray (subset_num_row, num_col)\n",
+    "        superset_mat: np.ndarray (superset_num_row, num_col)\n",
+    "\n",
+    "    Returns:\n",
+    "        List[np.ndarry]: list of the rows in subset <= row in superset\n",
+    "    \"\"\"\n",
+    "    num_row_subset, num_col = np.shape(subset_mat)\n",
+    "    num_row_superset, _ = np.shape(superset_mat)\n",
+    "    # Expand the matrices\n",
+    "    mat1 = np.repeat(subset_mat, num_row_superset, axis=0)\n",
+    "    mat2 = np.concatenate([superset_mat for _ in range(num_row_subset)])\n",
+    "    import pdb; pdb.set_trace()\n",
+    "    # Do the comparisons. Rows are the rows in superset; columns are rows in subset.\n",
+    "    # We want the indices of rows in superset for each column (row in subset)\n",
+    "    comparison_arr = np.reshape(np.all(mat1 <= mat2, axis=1), (num_row_superset, num_row_subset))\n",
+    "    index_arr = np.array(range(num_row_superset))  # All superset rows\n",
+    "    # For each row n in subset (column in comparison_arr), select those rows in superset\n",
+    "    # that satisfy the inequality.\n",
+    "    compatibles = [index_arr[comparison_arr[:, n]] for n in range(num_row_subset)]\n",
+    "    return compatibles\n",
+    "\n",
+    "# TESTS\n",
+    "findCompatibleRows(arr1, arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "f799255f-c965-405d-a7b5-4cb847eff533",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/var/folders/02/lb248q1j50dch2pthzkvxmpr0000gn/T/ipykernel_79183/709624473.py\u001b[0m(20)\u001b[0;36mfindCompatibleRows\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     18 \u001b[0;31m    \u001b[0;31m# Do the comparisons. Rows are the rows in superset; columns are rows in subset.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     19 \u001b[0;31m    \u001b[0;31m# We want the indices of rows in superset for each column (row in subset)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 20 \u001b[0;31m    \u001b[0mcomparison_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmat1\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mmat2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnum_row_superset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_row_subset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     21 \u001b[0;31m    \u001b[0mindex_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_row_superset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# All superset rows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     22 \u001b[0;31m    \u001b[0;31m# For each row n in subset (column in comparison_arr), select those rows in superset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  mat2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([[0, 4, 3, 2, 3],\n",
+      "       [2, 2, 4, 1, 2],\n",
+      "       [1, 1, 3, 2, 1],\n",
+      "       [2, 5, 4, 4, 3],\n",
+      "       [5, 2, 5, 4, 2],\n",
+      "       [2, 4, 5, 5, 4],\n",
+      "       [1, 2, 0, 0, 5],\n",
+      "       [2, 0, 3, 2, 1],\n",
+      "       [0, 1, 0, 4, 3],\n",
+      "       [1, 5, 1, 5, 5],\n",
+      "       [0, 4, 3, 2, 3],\n",
+      "       [2, 2, 4, 1, 2],\n",
+      "       [1, 1, 3, 2, 1],\n",
+      "       [2, 5, 4, 4, 3],\n",
+      "       [5, 2, 5, 4, 2],\n",
+      "       [2, 4, 5, 5, 4],\n",
+      "       [1, 2, 0, 0, 5],\n",
+      "       [2, 0, 3, 2, 1],\n",
+      "       [0, 1, 0, 4, 3],\n",
+      "       [1, 5, 1, 5, 5]])\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  c\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0, 1, 2, 7]), array([0, 1, 2, 6, 7, 9])]"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random tests\n",
+    "subset_size = 2\n",
+    "superset_size = 10\n",
+    "#subset_mat = np.array(np.random.randint(0, 3, (subset_size, 5)))\n",
+    "#superset_mat = np.array(np.random.randint(0, 6, (superset_size, 5)))\n",
+    "findCompatibleRows(subset_mat, superset_mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "24ca9774-5596-4d24-8335-5aef25e675fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1, 2, 0, 1],\n",
+       "       [2, 1, 1, 2, 2]])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "052568aa-3e92-428a-bfca-b0bc195361d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 4, 3, 2, 3],\n",
+       "       [2, 2, 4, 1, 2],\n",
+       "       [1, 1, 3, 2, 1],\n",
+       "       [2, 5, 4, 4, 3],\n",
+       "       [5, 2, 5, 4, 2],\n",
+       "       [2, 4, 5, 5, 4],\n",
+       "       [1, 2, 0, 0, 5],\n",
+       "       [2, 0, 3, 2, 1],\n",
+       "       [0, 1, 0, 4, 3],\n",
+       "       [1, 5, 1, 5, 5]])"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "superset_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "976e5698-78fe-440e-8bad-6149f3ef3057",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 4, 3, 2, 3],\n",
+       "       [2, 2, 4, 1, 2],\n",
+       "       [1, 1, 3, 2, 1],\n",
+       "       [2, 5, 4, 4, 3],\n",
+       "       [5, 2, 5, 4, 2],\n",
+       "       [2, 4, 5, 5, 4],\n",
+       "       [1, 2, 0, 0, 5],\n",
+       "       [2, 0, 3, 2, 1],\n",
+       "       [0, 1, 0, 4, 3],\n",
+       "       [1, 5, 1, 5, 5],\n",
+       "       [0, 4, 3, 2, 3],\n",
+       "       [2, 2, 4, 1, 2],\n",
+       "       [1, 1, 3, 2, 1],\n",
+       "       [2, 5, 4, 4, 3],\n",
+       "       [5, 2, 5, 4, 2],\n",
+       "       [2, 4, 5, 5, 4],\n",
+       "       [1, 2, 0, 0, 5],\n",
+       "       [2, 0, 3, 2, 1],\n",
+       "       [0, 1, 0, 4, 3],\n",
+       "       [1, 5, 1, 5, 5]])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([superset_mat for _ in range(2)])"
+   ]
   }
  ],
  "metadata": {
