--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 DSIRN
-1. Encoding includes pairs of arrays
-2. Use this encoding in iterating over subsets
-3. Network.isSubset
+3. PMatrix.isSubset
+4. Network.isSubset
+5. NetworkCollection.findSubsets
+6. Script to find networks that contain an antimony file as a subset
 Analysis
   1. Plot indeterminant vs. max_num_perm; do for naive algorith as well
   2. Provide statistics on structurally identicaly by type and dataset
