--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,14 @@
 DSIRN
+1. Refactor to use constraints, both enumerated and categorical
+  a. Implement Constraint, SpeciesConstraint, ReactionConstraint
+  b. Evaluate quality of constraints on benchmark networks
+     For pattern and target of different sizes
+       Calculate the number of permutations to evaluate based on
+       compatible evaluations
+  c. Integrate with Network
+    a) Define reactant, product for weak identity
+    b) Constructing hashes
+    c) IsStructurallyIdentical - species, reactions X enumerated, categorical
 6. Script to find networks that contain an antimony file as a subset
 Analysis
   1. Plot indeterminant vs. max_num_perm; do for naive algorith as well
