--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,6 @@
 DSIRN
 1. Refactor to use constraints, both enumerated and categorical
-  a. Implement Constraint, SpeciesConstraint, ReactionConstraint
-     Species: pred, succ X reaction type
-              number autocat reaction
-     Reaction: pred, succ X reaction type
-              number autocat species
-  a1: classify reaction using reactant_nmat, product_nmat
-      sum columns, max is 3, form pairs
+  a1. Evaluate subset constraints for reactions. Both.
   a2: Evaluation. Count duplicate rows in criteria mats as increase
       network size.
   b. Evaluate quality of constraints on benchmark networks
