--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,9 @@
 DSIRN
-1. Refactor to use constraints, both enumerated and categorical
-  a1. Evaluate subset constraints for reactions. Both.
-  a2: Evaluation. Count duplicate rows in criteria mats as increase
-      network size.
-  b. Evaluate quality of constraints on benchmark networks
-     For pattern and target of different sizes
-       Calculate the number of permutations to evaluate based on
-       compatible evaluations
-  c. Integrate with Network
-    a) Define reactant, product for weak identity
-    b) Constructing hashes
-    c) IsStructurallyIdentical - species, reactions X enumerated, categorical
+1. Do workflow diagram
+2. num_permutation estimates redudancies in a vectorized way
+3. Network.merge combines and randomizes multiple networks.
+4. Improve truncation so considers both constraints.
+5. Evaluate hash effectiveness
 6. Script to find networks that contain an antimony file as a subset
 Analysis
   1. Plot indeterminant vs. max_num_perm; do for naive algorith as well
