--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 FSIRN - finding structural subnets (pySubnetSB)
-1. total_assignments counts the combination of reaction and species
+1. max_num_assignments is broken, likely because of batching
 2. Search for cyclic subnets
    a. Serialize BioModels
    b. Look for oscillator file
