Refactor for CompatibilityCollectionResult

--- a/examples/api_basics.ipynb
+++ b/examples/api_basics.ipynb
@@ -234,7 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "eb93b70a-8ce0-4d74-b68f-6070b0744f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jlheller/home/Technical/repos/pySubnetSB/examples\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "3fa9088a-aeb8-4fbd-8704-115c3f534d46",
    "metadata": {},
    "outputs": [
@@ -596,7 +614,8 @@
     }
    ],
    "source": [
-    "URL = \"https://www.ebi.ac.uk/biomodels/services/download/get-files/MODEL1701090001/4/BIOMD0000000695_url.xml\"\n",
+    "PATH = \"/Users/jlheller/home/Technical/repos/SBMLModel/data/BIOMD0000000695.xml\"\n",
+    "#URL = \"https://www.ebi.ac.uk/biomodels/services/download/get-files/MODEL1701090001/4/BIOMD0000000695_url.xml\"\n",
     "rr = te.loadSBMLModel(URL)\n",
     "target_model = rr.getAntimony()\n",
     "print(target_model)"
@@ -604,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "269ccae2-151d-4a80-8d34-da03c892ffd9",
    "metadata": {},
    "outputs": [
@@ -639,11 +658,147 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "ipdb>  exit()\n"
+      "ipdb>  target_constraints\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** NameError: name 'target_constraints' is not defined\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  target_constraint\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Species--Categorical\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: [0]\n",
+      "\n",
+      "Enumerated\n",
+      "constraints  reactant_count  product_count  is_autocatalysis  r_null-null  \\\n",
+      "species                                                                     \n",
+      "xFinal_1                6.0            5.0               3.0          0.0   \n",
+      "xFinal_2               10.0           12.0               7.0          0.0   \n",
+      "xFinal_3                3.0            3.0               0.0          0.0   \n",
+      "xFinal_4                2.0            1.0               0.0          0.0   \n",
+      "xFinal_5                2.0            1.0               0.0          0.0   \n",
+      "xFinal_6                2.0            2.0               1.0          0.0   \n",
+      "xFinal_7                6.0            5.0               3.0          0.0   \n",
+      "xFinal_8               10.0           12.0               7.0          0.0   \n",
+      "xFinal_9                3.0            3.0               0.0          0.0   \n",
+      "xFinal_10               2.0            1.0               0.0          0.0   \n",
+      "xFinal_11               0.0            0.0               0.0          0.0   \n",
+      "xFinal_12               1.0            1.0               0.0          0.0   \n",
+      "\n",
+      "constraints  r_null-uni  r_null-bi  r_null-multi  r_uni-null  r_uni-uni  \\\n",
+      "species                                                                   \n",
+      "xFinal_1            0.0        0.0           0.0         1.0        0.0   \n",
+      "xFinal_2            0.0        0.0           0.0         1.0        1.0   \n",
+      "xFinal_3            0.0        0.0           0.0         1.0        2.0   \n",
+      "xFinal_4            0.0        0.0           0.0         1.0        1.0   \n",
+      "xFinal_5            0.0        0.0           0.0         1.0        1.0   \n",
+      "xFinal_6            0.0        0.0           0.0         1.0        0.0   \n",
+      "xFinal_7            0.0        0.0           0.0         1.0        0.0   \n",
+      "xFinal_8            0.0        0.0           0.0         1.0        1.0   \n",
+      "xFinal_9            0.0        0.0           0.0         1.0        2.0   \n",
+      "xFinal_10           0.0        0.0           0.0         1.0        1.0   \n",
+      "xFinal_11           0.0        0.0           0.0         0.0        0.0   \n",
+      "xFinal_12           0.0        0.0           0.0         1.0        0.0   \n",
+      "\n",
+      "constraints  r_uni-bi  ...  p_bi-bi  p_bi-multi  p_multi-null  p_multi-uni  \\\n",
+      "species                ...                                                   \n",
+      "xFinal_1          0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_2          3.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_3          0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_4          0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_5          0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_6          0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_7          3.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_8          3.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_9          0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_10         0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_11         0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "xFinal_12         0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "\n",
+      "constraints  p_multi-bi  p_multi-multi  s_1  s_2  p_1  p_2  \n",
+      "species                                                     \n",
+      "xFinal_1            0.0            3.0  4.0  7.0  3.0  6.0  \n",
+      "xFinal_2            1.0            4.0  5.0  8.0  5.0  6.0  \n",
+      "xFinal_3            0.0            0.0  2.0  6.0  1.0  5.0  \n",
+      "xFinal_4            0.0            0.0  1.0  1.0  1.0  1.0  \n",
+      "xFinal_5            0.0            0.0  1.0  1.0  1.0  1.0  \n",
+      "xFinal_6            0.0            0.0  1.0  1.0  3.0  7.0  \n",
+      "xFinal_7            0.0            1.0  4.0  7.0  4.0  6.0  \n",
+      "xFinal_8            1.0            4.0  5.0  8.0  5.0  6.0  \n",
+      "xFinal_9            0.0            0.0  2.0  6.0  1.0  5.0  \n",
+      "xFinal_10           0.0            0.0  1.0  0.0  1.0  1.0  \n",
+      "xFinal_11           0.0            0.0  0.0  0.0  0.0  0.0  \n",
+      "xFinal_12           0.0            0.0  0.0  0.0  1.0  1.0  \n",
+      "\n",
+      "[12 rows x 39 columns]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  reference_constraint\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Species--Categorical\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: [0]\n",
+      "\n",
+      "Enumerated\n",
+      "constraints  reactant_count  product_count  is_autocatalysis  r_null-null  \\\n",
+      "species                                                                     \n",
+      "S2                      4.0            5.0               3.0          0.0   \n",
+      "S0                      2.0            2.0               1.0          0.0   \n",
+      "S4                      3.0            3.0               2.0          0.0   \n",
+      "S3                      1.0            0.0               0.0          0.0   \n",
+      "\n",
+      "constraints  r_null-uni  r_null-bi  r_null-multi  r_uni-null  r_uni-uni  \\\n",
+      "species                                                                   \n",
+      "S2                  0.0        0.0           0.0         0.0        0.0   \n",
+      "S0                  0.0        0.0           0.0         0.0        0.0   \n",
+      "S4                  0.0        0.0           0.0         0.0        0.0   \n",
+      "S3                  0.0        0.0           0.0         0.0        1.0   \n",
+      "\n",
+      "constraints  r_uni-bi  ...  p_bi-bi  p_bi-multi  p_multi-null  p_multi-uni  \\\n",
+      "species                ...                                                   \n",
+      "S2                2.0  ...      0.0         0.0           0.0          0.0   \n",
+      "S0                1.0  ...      0.0         0.0           0.0          0.0   \n",
+      "S4                0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "S3                0.0  ...      0.0         0.0           0.0          0.0   \n",
+      "\n",
+      "constraints  p_multi-bi  p_multi-multi  s_1  s_2  p_1  p_2  \n",
+      "species                                                     \n",
+      "S2                  0.0            0.0  3.0  3.0  3.0  4.0  \n",
+      "S0                  0.0            0.0  2.0  3.0  2.0  4.0  \n",
+      "S4                  0.0            0.0  2.0  3.0  3.0  4.0  \n",
+      "S3                  0.0            0.0  1.0  3.0  0.0  0.0  \n",
+      "\n",
+      "[4 rows x 39 columns]\n"
      ]
     }
    ],
    "source": [
+    "rr = te.loadSBMLModel(PATH)\n",
     "result = findReferenceInTarget(reference_model, ModelSpecification(rr, specification_type=\"roadrunner\"), is_subset=True)\n",
     "result.assignment_pairs"
    ]
